# computer_vision

./: README.md
cv_lab1/: demo_opencv.cpp  lab1_1_2.cpp  lab1_3.cpp
cv_lab1/lab1_1/: CMakeLists.txt  lab1_1  lab1_1.cpp
cv_lab1/lab1_2/: CMakeLists.txt  lab1_2  lab1_2.cpp
cv_lab1/lab1_3/: CMakeLists.txt  lab1_3.cpp
cv_lab1/lab1_4/: CMakeLists.txt  main  main.cpp
cv_lab1/lab1_5/: CMakeLists.txt  main.cpp
cv_lab1/lab1_6/: CMakeLists.txt  main.cpp
cv_lab2/lab2_1/: CMakeLists.txt  main.cpp
cv_lab2/lab2_2/: CMakeLists.txt  main.cpp
cv_lab2/lab2_3/: CMakeLists.txt  main.cpp
cv_lab2/lab2_4/: CMakeLists.txt  main.cpp
cv_lab2/lab2_5/: CMakeLists.txt  main.cpp
cv_lab2_submission/: CMakeLists.txt  main.cpp  minmax_filters.cpp  minmax_filters.hpp
cv_lab3/lab3_1/: CMakeLists.txt  main.cpp
cv_lab3/lab3_2/: CMakeLists.txt  main  main.cpp
cv_lab3/lab3_3/: CMakeLists.txt  main.cpp
cv_lab3/lab3_4/: CMakeLists.txt  main.cpp
cv_lab4/lab4_1/: CMakeLists.txt  main.cpp
cv_lab5/: CMakeLists.txt
cv_lab5 (cursed)/: CMakeLists.txt
cv_lab5 (cursed)/headers/: lab5_tasks.hpp
cv_lab5 (cursed)/src/: CMakeLists.txt  main.cpp
cv_lab5/headers/: lab5_tasks.hpp
cv_lab5/src/: CMakeLists.txt  main.cpp  task3.cpp
cv_lab7/: CMakeLists.txt
cv_lab7/Code/: main.cpp  panoramic_img.cpp
cv_lab7/Code/header/: panoramic_img.h
